EN-1857 add Java 7 support for cryptography